# shopping-agent-adk

./: .gitignore  LICENSE  pyproject.toml
megamarket_agent/: agent.py  elasticsearch.py  order_handler.py  out_of_scope_agent.py  prompt.py  tools.py  utils.py
notebooks/: data_generation.ipynb  index_data.ipynb  orders.ipynb  search.ipynb  test.ipynb  test2.ipynb
