[project]
name = "product-consultant-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "elasticsearch>=9.0.2",
    "google-adk>=1.4.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pymongo[srv]==3.12",
]
